eight/card-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: card-bill
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    app: cardbill
